--- a/trip.html
+++ b/trip.html
@@ -7,7 +7,6 @@
     <header th:replace="header :: header">...</header>
     <div class="section no-pad-bot" id="index-banner">
         <div class="container">
-            <br><br>
             <div class="title">
                 <h1 class="header center orange-text" th:text="${trip.title}"></h1>
                 <span id="titlecontainer">
@@ -45,7 +44,6 @@
 
 				<div class="col s12 m6 l6 xl6">
                     <h4 class="header">
-                        <span data-target="modal1" class="btn-floating green"><i class="material-icons">hotel</i></span>
                         Accommodations &nbsp
                         <a class="btn-floating btn-medium waves-effect waves-light red right tooltipped" data-position="bottom" data-tooltip="Add Accommodation" th:href="@{'/trip/' + ${trip.id} + '/accommodation/add' }"><i
                                 class="material-icons">add</i></a>
@@ -103,7 +101,6 @@
                     <br>
 
                     <h4 class="header">
-                        <span data-target="modal1" class="btn-floating blue"><i class="material-icons">local_dining</i></span>
                         Reservations &nbsp
                         <a class="btn-floating btn-medium waves-effect waves-light red right tooltipped" data-position="bottom" data-tooltip="Add Reservation" th:href="@{'/trip/' + ${trip.id} + '/reservation/add' }"><i
                                 class="material-icons">add</i></a>
@@ -154,7 +151,6 @@
                 <div class="col s12 m6 l6 xl6">
                     <h4 class="header">
                     
-                        <span data-target="modal1" class="btn-floating red"><i class="material-icons">event_note</i></span>
                         Itineraries &nbsp
                       <span id="addbutton">
                         <a class="btn-floating btn-medium waves-effect waves-light red right tooltipped" data-position="bottom" data-tooltip="Add Itinerary" th:href="@{'/trip/' + ${trip.id} + '/itinerary/add' }"><i
@@ -195,7 +191,7 @@
     <a th:href="@{/trip/} + ${trip.id} + '/print'" id="stickylink"><i class="material-icons">print</i></a>
 
 <div th:replace="footer :: footer">...</div>
-
+</div>
 
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
